PSP/borradores/ae/jwt/REST-AdrianSaavedra/src/main/java/org/example/restadriansaavedra/common/errors/ApiError.java
package org.example.restadriansaavedra.common.errors;

public record ApiError(String message) {
}
